--- a/about.html
+++ b/about.html
@@ -186,8 +186,7 @@
   
               <div class="ltn__callout bg-overlay-theme-05 mt-30">
                 <p>
-                  "Enimad minim veniam quis nostrud exercitation <br />
-                  llamco laboris. Lorem ipsum dolor sit amet"
+                  "Conoscere il territorio, comprendere le persone: è così che troviamo la casa giusta per te."
                 </p>
               </div>
             </div>
