--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                           </a>
                         </div>
                         <h6 class="slide-sub-title white-color--- animated text-uppercase">
-                          <span><i class="fas fa-home"></i></span>SGS immobiliare di simone
+                          <span><i class="fas fa-home"></i></span>SGS immobiliare di Simone Gleria Sossi
                         </h6>
                         <h1 class="slide-title animated">
                           Realizziamo <br /><span>il tuo progetto</span>
@@ -179,7 +179,7 @@
                         </h1>
                         <div class="slide-brief animated">
                           <p>
-                            Ricostruzione senza pensieri.
+                            Vendi il tuo immobile senza stress.
                           </p>
                         </div>
                         <div class="btn-wrapper animated">
