--- a/contact.html
+++ b/contact.html
@@ -202,7 +202,7 @@
                 <div class="ltn__contact-address-icon">
                   <img src="img/icons/12.png" alt="Icon Image" />
                 </div>
-                <h3>Uficcio</h3>
+                <h3>Ufficio</h3>
                 <p>
                   Via Paolo Reti 1, 34122 <br />
                   Trieste, Italia
@@ -346,7 +346,7 @@
                           <i class="icon-placeholder"></i>
                         </div>
                         <div class="footer-address-info">
-                          <p><a href="https://maps.app.goo.gl/9Uynzs6qp7WA9ksE6">Via Paolo Reti 1, 34122, Trieste</a>
+                          <p><a href="https://maps.app.goo.gl/9Uynzs6qp7WA9ksE6">Via Paolo Reti 4, 34122, Trieste</a>
                           </p>
                         </div>
                       </li>
